Add locale time handling, changes in frontend
Main changes are: delete coverage stat, fixing backend api documentation for frontend, health metric was set to average success rate, UTC for dates and locale time was handled, but we still need a better way to handle this, parsing jobs in specific date was render on a table.
