# estela-api/api/views/stats.py
@@ -4,6 +4,7 @@ from typing import List, Tuple, Union
 from re import findall
 from json import dumps
 from django.db.models.query import QuerySet
+from django.utils import timezone
 from drf_yasg import openapi
 from drf_yasg.utils import swagger_auto_schema
 from rest_framework import status, mixins
@@ -20,7 +21,6 @@ from api.serializers.stats import (
     GlobalStatsSerializer,
     SpidersJobsStatsSerializer,
     JobsMetadataSerializer,
-    JobsStatsSerializer,
     GetJobsStatsSerializer,
 )
 from config.job_manager import spiderdata_db_client
@@ -33,33 +33,33 @@ from core.models import (
 
 class StatsForDashboardMixin:
     stats_mapping: dict = {
-            "items_count": "item_scraped_count",
-            "runtime": "elapsed_time_seconds",
-            "scraped_pages": "downloader/response_status_count/200",
-            "total_pages": "response_received_count",
-            "status_codes": {
-                "status_200": "downloader/response_status_count/200",
-                "status_301": "downloader/response_status_count/301",
-                "status_302": "downloader/response_status_count/302",
-                "status_401": "downloader/response_status_count/401",
-                "status_403": "downloader/response_status_count/403",
-                "status_404": "downloader/response_status_count/404",
-                "status_429": "downloader/response_status_count/429",
-                "status_500": "downloader/response_status_count/500",
-            },
-            "logs": {
-                "debug_logs": "log_count/DEBUG",
-                "info_logs": "log_count/INFO",
-                "warning_logs": "log_count/WARNING",
-                "error_logs": "log_count/ERROR",
-                "critical_logs": "log_count/CRITICAL",
-            },
-            "coverage": "coverage",
-        }
-    
+        "items_count": "item_scraped_count",
+        "runtime": "elapsed_time_seconds",
+        "scraped_pages": "downloader/response_status_count/200",
+        "total_pages": "response_received_count",
+        "status_codes": {
+            "status_200": "downloader/response_status_count/200",
+            "status_301": "downloader/response_status_count/301",
+            "status_302": "downloader/response_status_count/302",
+            "status_401": "downloader/response_status_count/401",
+            "status_403": "downloader/response_status_count/403",
+            "status_404": "downloader/response_status_count/404",
+            "status_429": "downloader/response_status_count/429",
+            "status_500": "downloader/response_status_count/500",
+        },
+        "logs": {
+            "debug_logs": "log_count/DEBUG",
+            "info_logs": "log_count/INFO",
+            "warning_logs": "log_count/WARNING",
+            "error_logs": "log_count/ERROR",
+            "critical_logs": "log_count/CRITICAL",
+        },
+        "coverage": "coverage",
+    }
+
     def get_parameters(self, request: Request) -> Tuple[datetime, datetime]:
-        start_date = request.query_params.get("start_date", datetime.utcnow())
-        end_date = request.query_params.get("end_date", datetime.utcnow())
+        start_date = request.query_params.get("start_date", timezone.now())
+        end_date = request.query_params.get("end_date", timezone.now())
 
         try:
             if type(start_date) == str:
@@ -76,7 +76,6 @@ class StatsForDashboardMixin:
     def summarize_stats_results(
         self, stats_set: List[dict], jobs_set: QuerySet[SpiderJob]
     ) -> dict:
-        
         stats_results = defaultdict(lambda: defaultdict(int))
         stats_results.default_factory = lambda: {
             "jobs": {
@@ -191,19 +190,17 @@ class StatsForDashboardMixin:
                 )
         return stats_results
 
-    def parse_jobs_stats(self, stats_ids: List[str], stats_set: List[dict]) -> GetJobsStatsSerializer:
-        reformatted_stats_set: dict = {stat["_id"]:stat for stat in stats_set}
-        jobs_stats_results:List[dict] = []
-        
+    def parse_jobs_stats(
+        self, stats_ids: List[str], stats_set: List[dict]
+    ) -> GetJobsStatsSerializer:
+        reformatted_stats_set: dict = {stat["_id"]: stat for stat in stats_set}
+        jobs_stats_results: List[dict] = []
+
         for stat_id in stats_ids:
             ids = findall(r"\d+", stat_id)
             spider_id, job_id = int(ids[0]), int(ids[1])
-            job_stat_result:dict = {
-                "jid": job_id,
-                "sid": spider_id,
-                "stats": {}
-            }
-            stats:Union[dict,None] = reformatted_stats_set.get(stat_id)
+            job_stat_result: dict = {"jid": job_id, "spider": spider_id, "stats": {}}
+            stats: Union[dict, None] = reformatted_stats_set.get(stat_id)
             if isinstance(stats, dict):
                 job_stat_result["stats"]["items_count"] = stats.get(
                     self.stats_mapping["items_count"], 0
@@ -213,7 +210,7 @@ class StatsForDashboardMixin:
                     self.stats_mapping["runtime"], 0.0
                 )
                 
-                job_stat_result["stats"]["pages"]:dict = {}
+                job_stat_result["stats"]["pages"]: dict = {}
                 job_stat_result["stats"]["pages"]["scraped_pages"] = stats.get(
                     self.stats_mapping["scraped_pages"], 0
                 )
@@ -224,71 +221,73 @@ class StatsForDashboardMixin:
                     self.stats_mapping["total_pages"], 0
                 )
 
-                job_stat_result["stats"]["status_codes"]:dict = {}
+                job_stat_result["stats"]["status_codes"]: dict = {}
                 for status_code in self.stats_mapping["status_codes"]:
                     job_stat_result["stats"]["status_codes"][status_code] = stats.get(
                         self.stats_mapping["status_codes"][status_code], 0
                     )
 
-                job_stat_result["stats"]["logs"]:dict = {}
+                job_stat_result["stats"]["logs"]: dict = {}
                 for log in self.stats_mapping["logs"]:
                     log_count = stats.get(self.stats_mapping["logs"][log], 0)
                     job_stat_result["stats"]["logs"][log] = log_count
                     job_stat_result["stats"]["logs"]["total_logs"] = log_count
 
-                job_stat_result["stats"]["coverage"]:dict = {}
-                coverage:Union[dict, None] = stats.get(self.stats_mapping["coverage"], None)
+                job_stat_result["stats"]["coverage"]: dict = {}
+                coverage: Union[dict, None] = stats.get(
+                    self.stats_mapping["coverage"], None
+                )
                 if isinstance(coverage, dict):
                     for coverage_field, coverage_value in coverage.items():
-                        job_stat_result["stats"]["coverage"][coverage_field] = coverage_value
+                        job_stat_result["stats"]["coverage"][
+                            coverage_field
+                        ] = coverage_value
             jobs_stats_results.append(job_stat_result)
 
         return GetJobsStatsSerializer(data=jobs_stats_results, many=True)
 
     @swagger_auto_schema(
         operation_description="Retrieve stats of all jobs metadata.",
-        request_body=openapi.Schema(
-            type=openapi.TYPE_ARRAY,
-            items=openapi.Schema(
-                type=openapi.TYPE_OBJECT,
-                properties={
-                    "jid": openapi.Schema(type=openapi.TYPE_INTEGER),
-                    "sid": openapi.Schema(type=openapi.TYPE_INTEGER),
-                },
-            ),
-        ),
+        request_body=ListSerializer(child=GetJobsStatsSerializer()),
         request_body_description="The list of jobs metadata to retrieve its stats.",
         responses={
             status.HTTP_200_OK: openapi.Response(
                 description="Array with stats summary for each job",
-                schema=ListSerializer(child=JobsStatsSerializer()),
+                schema=ListSerializer(child=GetJobsStatsSerializer()),
             ),
         },
     )
     @action(methods=["POST"], detail=False)
     def jobs_stats(self, request: Request, *args, **kwargs):
-        jobs_stats_ids:List[str] = []
+        jobs_stats_ids: List[str] = []
         try:
             if not isinstance(request.data, list):
-                raise ValidationError("Please provide a valid body schema [{jid:number, sid:number}]")
+                raise ValidationError(
+                    "Please provide a valid body schema [{jid:number, spider:number}]"
+                )
             for job_metadata in request.data:
-                if job_metadata.get('sid') is not None and job_metadata.get('jid') is not None:
-                    jobs_stats_ids.append(f"{job_metadata.get('sid')}-{job_metadata.get('jid')}-job_stats")
+                serializer = GetJobsStatsSerializer(data=job_metadata)
+                if serializer.is_valid():
+                    jobs_stats_ids.append(
+                        f"{serializer.validated_data.get('spider')}-{serializer.validated_data.get('jid')}-job_stats"
+                    )
                 else:
-                    raise ValidationError("Please provide a valid body schema [{jid:number, sid:number}]")
+                    raise ValidationError(serializer.error_messages)
         except ValidationError as e:
             return Response({"error": str(e)}, status=status.HTTP_400_BAD_REQUEST)
         if not spiderdata_db_client.get_connection():
             raise DataBaseError({"error": errors.UNABLE_CONNECT_DB})
-        
+
         stats_set: List[dict] = spiderdata_db_client.get_jobs_set_stats(
             kwargs["pid"], jobs_stats_ids
         )
-        print(dumps(stats_set, indent=2))
-        
+
         serializer = self.parse_jobs_stats(jobs_stats_ids, stats_set)
         if not serializer.is_valid():
-            return Response({"error": serializer.errors}, status=status.HTTP_500_INTERNAL_SERVER_ERROR)
+            return Response(
+                {"error": serializer.errors},
+                status=status.HTTP_500_INTERNAL_SERVER_ERROR,
+            )
         return Response(data=serializer.data, status=status.HTTP_200_OK)
 
 
