# estela-web/src/services/api/generated-api/models/index.ts
@@ -6,8 +6,8 @@ export * from './Deploy';
 export * from './DeployCreate';
 export * from './DeployUpdate';
 export * from './FieldCoverageStats';
+export * from './GetJobsStats';
 export * from './GlobalStats';
-export * from './InlineObject';
 export * from './InlineResponse200';
 export * from './InlineResponse2001';
 export * from './InlineResponse2002';
